--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div id="buttons">
+        <button type="button" id="rock">Kamień</button>
+        <button type="button" id="scisours">Nożyce</button>
+        <button type="button" id="paper">papier</button>
+    </div>
 	<div class="container">
-		<div id="buttons"></div>
 		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
